@@ -19,7 +19,7 @@ import com.hpe.caf.codec.JsonCodec;
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 /**
  * DockerSwarm configuration class - unit testing only.
@@ -36,7 +36,7 @@ public class DockerSwarmAutoscaleConfigurationTest
         DockerSwarmAutoscaleConfiguration autoscaleConfiguration = new DockerSwarmAutoscaleConfiguration();
 
         autoscaleConfiguration.setEndpoint("http://TestEndpoint:8081");
-        autoscaleConfiguration.setTimeoutInSecs(new Long(10));
+        autoscaleConfiguration.setTimeoutInSecs(Long.valueOf(10));
         autoscaleConfiguration.setStackId("AnyOldStack");
         autoscaleConfiguration.setMaximumInstances(24);
         autoscaleConfiguration.setTlsVerify(true);
