@@ -29,7 +29,7 @@ import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.Before;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 /**
  *
@@ -182,7 +182,7 @@ public class DeveloperEndpointIT
     {
         DockerSwarmAutoscaleConfiguration config = new DockerSwarmAutoscaleConfiguration();
         config.setEndpoint("http://192.168.56.10:2375");
-        config.setTimeoutInSecs(new Long(10));
+        config.setTimeoutInSecs(Long.valueOf(10));
         return config;
     }
 }
