@@ -26,7 +26,7 @@ import java.util.Set;
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 /**
  *
@@ -40,7 +40,7 @@ public class DeveloperEndpointIT
     {
         DockerSwarmAutoscaleConfiguration config = new DockerSwarmAutoscaleConfiguration();
         config.setEndpoint("http://192.168.56.10:2375");
-        config.setTimeoutInSecs(new Long(10));
+        config.setTimeoutInSecs(Long.valueOf(10));
         config.setStackId("jobservicedemo");
         return config;
     }
